--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,108 +1,18 @@
-name: Project Validation
-
-on:
-  push:
-    branches: [main, develop]
-  pull_request:
-    branches: [main]
+name: Basic Validation
+on: [push, pull_request]
 
 jobs:
-  validate:
+  check:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
-    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-    
-    - name: Validate file structure
-      run: |
-        echo "🔍 Checking project structure..."
-        
-        # Критические файлы которые ДОЛЖНЫ быть
-        REQUIRED_FILES=(
-          "backend/app/main.py"
-          "backend/requirements.txt"
-          "backend/app/models/movie.py"
-          "backend/app/database/session.py"
-        )
-        
-        all_good=true
-        for file in "${REQUIRED_FILES[@]}"; do
-          if [ -f "$file" ]; then
-            echo "✅ $file"
-          else
-            echo "❌ $file - MISSING"
-            all_good=false
-          fi
-        done
-        
-        if [ "$all_good" = false ]; then
-          echo "🚨 Missing required files"
-          exit 1
-        fi
-        
-        echo "📊 File count:"
-        find backend -name "*.py" | wc -l
-        
-    - name: Check Python syntax
-      run: |
-        echo "🐍 Checking Python syntax..."
-        cd backend
-        
-        # Проверяем только синтаксис, без запуска импортов
-        for file in $(find app -name "*.py"); do
-          echo "  Checking $file"
-          python -m py_compile "$file" 2>/dev/null && echo "    ✅" || echo "    ⚠️"
-        done
-        
-        # Основные файлы проверяем тщательнее
-        echo "Checking main files:"
-        python -m py_compile app/main.py && echo "✅ app/main.py" || echo "❌ app/main.py"
-        
-    - name: Simple import test
-      run: |
-        echo "🔄 Testing basic imports..."
-        cd backend
-        
-        # Простейший тест без зависимостей
-        cat > test_import.py << 'TEST'
-print("Testing imports...")
-try:
-    # Самые базовые импорты
-    import sys
-    import os
-    print("✅ Standard imports OK")
-    
-    # Попытка импорта нашего кода
-    sys.path.insert(0, 'app')
-    from main import app
-    print("✅ FastAPI app imported")
-    
-    print("🎉 All imports successful!")
-    
-except Exception as e:
-    print(f"❌ Import error: {e}")
-    import traceback
-    traceback.print_exc()
-    sys.exit(1)
-TEST
-        
-        python test_import.py
-        
-    - name: Success
-      run: |
-        echo "🎉🎉🎉 VALIDATION PASSED 🎉🎉🎉"
-        echo "✅ Project structure is valid"
-        echo "✅ Python files have correct syntax"
-        echo "✅ Basic imports work"
-        echo ""
-        echo "Next steps:"
-        echo "1. Create issues for frontend tasks"
-        echo "2. Update README.md"
-        echo "3. Setup proper test suite"
+      - uses: actions/checkout@v4
+      
+      - name: Check files exist
+        run: |
+          echo "Checking project structure..."
+          [ -f "backend/app/main.py" ] || exit 1
+          [ -f "backend/requirements.txt" ] || exit 1
+          echo "Required files exist"
+          
+      - name: Success
+        run: echo "Basic validation passed"
