Add complex CI validation for develop branch

--- a/.github/workflows/develop-validation.yml
+++ b/.github/workflows/develop-validation.yml
@@ -1,4 +1,4 @@
-name: Develop Branch - Full Validation
+name: Develop Branch CI
 on:
   push:
     branches:
@@ -6,214 +6,143 @@ on:
   pull_request:
     branches:
       - develop
-  workflow_dispatch:  # Позволяет запускать вручную
 
 jobs:
-  full-validation:
+  validate-structure:
     runs-on: ubuntu-latest
-    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Полная история для проверки
-
-      - name: Show branch and structure
-        run: |
-          echo " Проверка ветки: ${{ github.ref_name }}"
-          echo " Структура проекта:"
-          find . -type f -name "*.py" -o -name "*.txt" -o -name "*.md" -o -name "*.yml" -o -name "*.yaml" | sort
-          echo ""
-          echo " Общая информация:"
-          ls -la
 
       - name: Validate backend structure
         run: |
-          echo " Проверка backend структуры..."
+          echo "Checking backend structure..."
+          [ -f "backend/app/main.py" ] || { echo "ERROR: backend/app/main.py not found"; exit 1; }
+          [ -f "backend/requirements.txt" ] || { echo "ERROR: backend/requirements.txt not found"; exit 1; }
+          [ -f "backend/.env" ] || echo "WARNING: backend/.env not found"
           
-          # Обязательные файлы
-          REQUIRED_FILES=(
-            "app/main.py"
-            "app/models.py"
-            "app/database.py"
-            "app/schemas.py"
-            "app/crud.py"
-            "requirements.txt"
-            "Dockerfile"
-          )
+          # Check API endpoints
+          [ -f "backend/app/api/endpoints/genres.py" ] || { echo "ERROR: genres.py endpoint not found"; exit 1; }
+          [ -f "backend/app/api/endpoints/movies.py" ] || { echo "ERROR: movies.py endpoint not found"; exit 1; }
           
-          for file in "${REQUIRED_FILES[@]}"; do
-            if [ -f "backend/$file" ]; then
-              echo "   backend/$file"
-            else
-              echo "   backend/$file - НЕ НАЙДЕН!"
-              exit 1
-            fi
-          done
+          # Check database files
+          [ -f "backend/app/database/config.py" ] || { echo "ERROR: database config.py not found"; exit 1; }
+          [ -f "backend/app/database/session.py" ] || { echo "ERROR: database session.py not found"; exit 1; }
           
-          # Проверка директорий
-          REQUIRED_DIRS=("app" "tests" "alembic")
-          for dir in "${REQUIRED_DIRS[@]}"; do
-            if [ -d "backend/$dir" ]; then
-              echo "   Директория backend/$dir существует"
-            else
-              echo "   Директория backend/$dir отсутствует"
-            fi
-          done
+          # Check models and schemas
+          [ -f "backend/app/models/movie.py" ] || { echo "ERROR: movie.py model not found"; exit 1; }
+          [ -f "backend/app/schemas/movie.py" ] || { echo "ERROR: movie.py schema not found"; exit 1; }
+          
+          echo "Backend structure validation passed"
 
       - name: Validate frontend structure
         run: |
-          echo " Проверка frontend структуры..."
+          echo "Checking frontend structure..."
+          [ -f "frontend/index.html" ] || { echo "ERROR: frontend/index.html not found"; exit 1; }
+          [ -f "frontend/vite.config.js" ] || { echo "ERROR: vite.config.js not found"; exit 1; }
+          [ -f "frontend/src/App.vue" ] || { echo "ERROR: App.vue not found"; exit 1; }
+          [ -f "frontend/src/main.js" ] || { echo "ERROR: main.js not found"; exit 1; }
           
-          # Основные файлы фронтенда
-          FRONTEND_FILES=(
-            "package.json"
-            "Dockerfile"
-            "nginx.conf"
-            ".dockerignore"
-          )
+          # Check components
+          [ -f "frontend/src/components/MovieCard.vue" ] || { echo "ERROR: MovieCard.vue component not found"; exit 1; }
+          [ -f "frontend/src/components/MovieList.vue" ] || { echo "ERROR: MovieList.vue component not found"; exit 1; }
           
-          for file in "${FRONTEND_FILES[@]}"; do
-            if [ -f "frontend/$file" ]; then
-              echo "   frontend/$file"
+          # Check services and router
+          [ -f "frontend/src/router/index.js" ] || { echo "ERROR: router index.js not found"; exit 1; }
+          [ -f "frontend/src/services/api.js" ] || { echo "ERROR: api.js service not found"; exit 1; }
+          
+          # Check views
+          [ -f "frontend/src/views/GenresView.vue" ] || { echo "ERROR: GenresView.vue not found"; exit 1; }
+          [ -f "frontend/src/views/HomeView.vue" ] || { echo "ERROR: HomeView.vue not found"; exit 1; }
+          [ -f "frontend/src/views/MoviesView.vue" ] || { echo "ERROR: MoviesView.vue not found"; exit 1; }
+          
+          echo "Frontend structure validation passed"
+
+      - name: Check project root files
+        run: |
+          echo "Checking project root files..."
+          [ -f ".gitignore" ] || echo "WARNING: .gitignore not found"
+          [ -f "readme.md" ] || [ -f "README.md" ] || echo "WARNING: README.md not found"
+          
+          echo "Project root validation passed"
+
+      - name: Success
+        run: echo "All validations passed for develop branch"
+
+  python-check:
+    runs-on: ubuntu-latest
+    needs: validate-structure
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Check Python syntax
+        run: |
+          echo "Checking Python files syntax..."
+          python -m py_compile backend/app/main.py || exit 1
+          
+          # Check all Python files in app directory
+          find backend/app -name "*.py" -exec python -m py_compile {} \;
+          
+          echo "Python syntax validation passed"
+
+      - name: Validate requirements.txt
+        run: |
+          echo "Checking requirements.txt format..."
+          if [ -f "backend/requirements.txt" ]; then
+            if grep -q "==" "backend/requirements.txt"; then
+              echo "requirements.txt has valid format"
             else
-              echo "   frontend/$file - не найден"
+              echo "WARNING: requirements.txt may not have version pins"
             fi
-          done
-          
-          # Проверка ключевых директорий
-          if [ -d "frontend/src" ]; then
-            echo "   Директория frontend/src существует"
-            echo "    Файлы в src:"
-            ls -la frontend/src/ | head -10
           fi
 
-      - name: Validate docker-compose
+  test-backend:
+    runs-on: ubuntu-latest
+    needs: python-check
+    if: success()
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Check for tests
         run: |
-          echo " Проверка Docker конфигураций..."
-          
-          if [ -f "docker-compose.yml" ]; then
-            echo "   docker-compose.yml найден"
-            echo "    Проверяем структуру..."
-            
-            # Проверяем наличие ключевых сервисов
-            if grep -q "backend:" docker-compose.yml; then
-              echo "     Сервис backend определен"
-            fi
-            
-            if grep -q "frontend:" docker-compose.yml; then
-              echo "     Сервис frontend определен"
-            fi
-            
-            if grep -q "postgres:" docker-compose.yml || grep -q "database:" docker-compose.yml; then
-              echo "     Сервис базы данных определен"
+          echo "Checking test structure..."
+          if [ -d "backend/tests" ]; then
+            echo "Test directory found"
+            if [ -f "$(find backend/tests -name '*.py' | head -1)" ]; then
+              echo "Python test files found"
+            else
+              echo "WARNING: No Python test files in tests directory"
             fi
           else
-            echo "   docker-compose.yml не найден!"
+            echo "WARNING: backend/tests directory not found"
+          fi
+
+  final:
+    runs-on: ubuntu-latest
+    needs: [validate-structure, python-check, test-backend]
+    if: always()
+    steps:
+      - name: Completion status
+        run: |
+          if [ "${{ needs.validate-structure.result }}" == "success" ] && \
+             [ "${{ needs.python-check.result }}" == "success" ]; then
+            echo "DEVELOP BRANCH CI COMPLETED SUCCESSFULLY"
+            echo "All structure validations passed"
+            echo "Python files are syntactically valid"
+          else
+            echo "CI VALIDATION FAILED"
+            echo "Check the previous steps for details"
             exit 1
           fi
-          
-          # Проверка .env.example
-          if [ -f ".env.example" ]; then
-            echo "   .env.example найден"
-            echo "    Количество переменных: $(grep -c '=' .env.example)"
-          fi
-
-      - name: Validate database migrations
-        run: |
-          echo " Проверка миграций базы данных..."
-          
-          if [ -d "backend/alembic" ]; then
-            echo "   Директория alembic существует"
-            
-            if [ -f "backend/alembic.ini" ]; then
-              echo "   alembic.ini найден"
-            fi
-            
-            if [ -d "backend/alembic/versions" ]; then
-              echo "   Директория versions существует"
-              echo "    Найдено миграций: $(find backend/alembic/versions -name "*.py" | wc -l)"
-            fi
-          else
-            echo "   Миграции не найдены"
-          fi
-
-      - name: Validate Python files syntax
-        run: |
-          echo "Проверка синтаксиса Python файлов..."
-          
-          # Находим все Python файлы и проверяем синтаксис
-          find backend -name "*.py" | while read pyfile; do
-            if python3 -m py_compile "$pyfile" 2>/dev/null; then
-              echo " $pyfile"
-            else
-              echo " $pyfile - ошибка синтаксиса!"
-              python3 -m py_compile "$pyfile"
-            fi
-          done
-
-      - name: Check requirements.txt format
-        run: |
-          echo "Проверка requirements.txt..."
-          
-          if [ -f "backend/requirements.txt" ]; then
-            echo "  Содержимое requirements.txt:"
-            echo "  ----------------------------"
-            cat backend/requirements.txt
-            echo "  ----------------------------"
-            
-            # Проверяем количество зависимостей
-            COUNT=$(grep -v "^#" backend/requirements.txt | grep -v "^$" | wc -l)
-            echo "  Найдено зависимостей: $COUNT"
-            
-            if [ $COUNT -gt 0 ]; then
-              echo "requirements.txt содержит зависимости"
-            else
-              echo "requirements.txt пуст или содержит только комментарии"
-            fi
-          fi
-
-      - name: Run tests if exist
-        run: |
-          echo "Поиск и запуск тестов..."
-          
-          if [ -d "backend/tests" ]; then
-            echo "  Директория tests найдена"
-            
-            # Считаем тестовые файлы
-            TEST_FILES=$(find backend/tests -name "test_*.py" -o -name "*_test.py" | wc -l)
-            echo "  Найдено тестовых файлов: $TEST_FILES"
-            
-            if [ $TEST_FILES -gt 0 ]; then
-              echo "  Запускаем тесты..."
-              
-              # Устанавливаем Python зависимости для тестов
-              cd backend
-              pip install -r requirements.txt 2>/dev/null || echo "Не удалось установить зависимости"
-              
-              # Пробуем запустить тесты
-              if python -m pytest tests/ -v --tb=short 2>&1 | head -50; then
-                echo "Тесты выполнены успешно"
-              else
-                echo "Тесты не выполнены или отсутствуют"
-              fi
-              cd ..
-            fi
-          else
-            echo "Директория tests не найдена"
-          fi
-
-      - name: Final summary
-        run: |
-          echo "ОТЧЕТ О ПРОВЕРКЕ ВЕТКИ DEVELOP"
-          echo "Все обязательные файлы найдены"
-          echo "Структура проекта корректна"
-          echo "Docker конфигурации присутствуют"
-          echo "Python файлы имеют корректный синтаксис"
-          echo ""
-          echo "Статистика:"
-          echo "  Python файлов: $(find backend -name "*.py" | wc -l)"
-          echo "  Тестовых файлов: $(find backend/tests -name "*.py" 2>/dev/null | wc -l)"
-          echo "  Миграций: $(find backend/alembic/versions -name "*.py" 2>/dev/null | wc -l)"
-          echo ""
-          echo "Ветка develop прошла полную валидацию!"
